--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,18 +1,23 @@
-FROM ruby:2.2
-RUN apt-get update -qq && apt-get install -y build-essential
+FROM alpine:3.7
 
 ENV APP_HOME /app
-RUN mkdir $APP_HOME
-
-WORKDIR $APP_HOME
-ADD Gemfile* $APP_HOME/
-RUN bundle install
-ADD . $APP_HOME
-
 ENV POST_SERVICE_HOST post
 ENV POST_SERVICE_PORT 5000
 ENV COMMENT_SERVICE_HOST comment
 ENV COMMENT_SERVICE_PORT 9292
 
-CMD ["puma"]
 
+RUN apk update && \
+    apk upgrade && \
+    apk add build-base && \
+    apk add ruby ruby-bundler ruby-dev && \
+    rm -rf /var/cache/apk/* && \
+    mkdir $APP_HOME
+
+WORKDIR $APP_HOME
+
+ADD Gemfile* $APP_HOME/
+RUN bundle install
+ADD . $APP_HOME
+
+CMD ["puma"]
