--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -5,7 +5,7 @@ ENV POST_SERVICE_HOST post
 ENV POST_SERVICE_PORT 5000
 ENV COMMENT_SERVICE_HOST comment
 ENV COMMENT_SERVICE_PORT 9292
-
+ENV network=reddit
 
 RUN apk update && \
     apk upgrade && \
@@ -19,5 +19,7 @@ WORKDIR $APP_HOME
 ADD Gemfile* $APP_HOME/
 RUN bundle install
 ADD . $APP_HOME
+
+EXPOSE 9292
 
 CMD ["puma"]
