--- a/src/ui/Dockerfile.1
+++ b/src/ui/Dockerfile.1
@@ -1,14 +1,26 @@
-FROM ruby:2.2
-RUN apt-get update -qq && apt-get install -y build-essential
+FROM alpine:3.7
 
 ENV APP_HOME /app
 RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
-ADD Gemfile* $APP_HOME/
-RUN bundle install
-COPY . $APP_HOME
+COPY Gemfile* $APP_HOME/
 
-ENV COMMENT_DATABASE_HOST comment_db
-ENV COMMENT_DATABASE comments
+RUN apk --no-cache update &&\
+    apk add ruby-full &&\
+    apk add ruby-dev &&\
+    apk add build-base &&\
+    gem install bundler:1.17.2 --no-document &&\
+    bundle install &&\
+    apk del build-base
+
+COPY . @APP_HOME
+
+ENV POST_SERVICE_HOST post
+ENV POST_SERVICE_PORT 5000
+ENV COMMENT_SERVICE_HOST comment
+ENV COMMENT_SERVICE_PORT 9292
+ENV network=reddit
+
+#EXPOSE 9292:9292
 
 CMD ["puma"]
