--- a/gitlab-ci/ansible/vars.yml
+++ b/gitlab-ci/ansible/vars.yml
@@ -1,5 +1,5 @@
-gitlab_runner_coordinator_url: "http:/35.228.209.166/"
-gitlab_runner_registration_token: ''
+gitlab_runner_coordinator_url: "http:/35.228.88.166/"
+gitlab_runner_registration_token: 'U4ozZUKPaeKhdYEaDpEo'
 gitlab_runner_runners:
   - name: 'Docker GitLab Runner'
     executor: docker
@@ -12,4 +12,3 @@ gitlab_runner_runners:
     docker_volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/cache"
-
