stuck at comment service UP, but healthcheck = 0

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,6 +1,9 @@
 # parametrizing environment
 
-USERNAME=shaadowsky
-VER_UI=1.0
+MONGO_VERSION=3.2
+USER_NAME=shaadowsky
+VER_UI=latest
 EXTERNAL_PORT=9292
 COMPOSE_PROJECT_NAME=reddit
+UI_PORT=9292
+REDDIT_PORT=9292
