--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -35,6 +35,19 @@ services:
     networks:
       - reddit
       - ui
+  node-exporter:
+    image: prom/node-exporter:v0.15.2
+    user: root
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
+    networks:
+      - reddit
 
 volumes:
   post_db:
