--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -17,3 +17,8 @@
       static_configs:
         - targets:
           - 'comment:9292'
+  
+    - job_name: 'node'
+      static_configs:
+        - targets:
+          - 'node-exporter:9100' 
