checking if done

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,9 +1,11 @@
-# parametrizing environment
-
 MONGO_VERSION=3.2
 USER_NAME=shaadowsky
+USENAME=shaadowsky
 VER_UI=latest
 EXTERNAL_PORT=9292
-COMPOSE_PROJECT_NAME=reddit
 UI_PORT=9292
 REDDIT_PORT=9292
+COMPOSE_PROJECT_NAME=reddit
+POST_VERSION=latest
+COMMENT_VERSION=latest
+ZIPKIN_ENABLED=true
