fixing travis errors

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,7 +1,6 @@
 MONGO_VERSION=3.2
 USER_NAME=shaadowsky
-USENAME=shaadowsky
-VER_UI=latest
+UI_VERSION=latest
 EXTERNAL_PORT=9292
 UI_PORT=9292
 REDDIT_PORT=9292
