--- a/kubernetes/Charts/comment/values.yaml
+++ b/kubernetes/Charts/comment/values.yaml
@@ -3,7 +3,7 @@ service:
   externalPort: 9292
 
 image:
-  repository: shaadowsky/ui
+  repository: shaadowsky/comment
   tag: latest
 
 databaseHost:
